# toolkitICL

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/: IntelPowerGadgetLib.h  hdf5_io.hpp  ocl_dev_mgr.hpp  opencl_include.hpp  rapl.h
src/: CMakeLists.txt  IntelPowerGadgetLib.cpp  hdf5_io.cpp  main.cpp  ocl_dev_mgr.cpp  rapl.cpp
test/: CMakeLists.txt  parsing_filename_test.cpp
